# fyp2016

./: README.md
arduino/: arduino_driver.ino
arduino/ros_motor/: ros_motor.ino
arduino/ros_sensor/: ros_sensor.ino
arduino/sabertooth_gy80/: sabertooth_gy80.ino
gui/gui/: gui.cbp  gui.layout  guiApp.cpp  guiApp.h  guiMain.cpp  guiMain.h
ros/: scan1.txt  scan2.txt  scan2_trans.txt  test_updateBox.sh
ros/build-src-Desktop_Qt_5_7_0_GCC_64bit-Default/: CMakeCache.txt  CTestTestfile.cmake  Makefile  Project.cbp  cmake_install.cmake
ros/build-src-Desktop_Qt_5_7_0_GCC_64bit-Default/catkin_generated/: generate_cached_setup.py  order_packages.py  setup_cached.sh
ros/build-src-Desktop_Qt_5_7_0_GCC_64bit-Default/devel/: .catkin  .rosinstall  setup.sh
ros/build-src-Desktop_Qt_5_7_0_GCC_64bit-Default/devel/include/stdr_msgs/: AddCO2SourceRequest.h  AddCO2SourceResponse.h  AddRfidTagRequest.h  AddRfidTagResponse.h  AddSoundSourceRequest.h  AddSoundSourceResponse.h  AddThermalSourceRequest.h  AddThermalSourceResponse.h  CO2SensorMeasurementMsg.h  CO2SensorMsg.h  CO2Source.h  CO2SourceVector.h  DeleteCO2SourceRequest.h  DeleteCO2SourceResponse.h  DeleteRfidTagRequest.h  DeleteRfidTagResponse.h  DeleteRobotAction.h  DeleteRobotActionFeedback.h  DeleteRobotActionGoal.h  DeleteRobotActionResult.h  DeleteRobotFeedback.h  DeleteRobotGoal.h  DeleteRobotResult.h  DeleteSoundSourceRequest.h  DeleteSoundSourceResponse.h  DeleteThermalSourceRequest.h  DeleteThermalSourceResponse.h  FootprintMsg.h  KinematicMsg.h  (+40 more)
ros/build-src-Desktop_Qt_5_7_0_GCC_64bit-Default/first_try/: CTestTestfile.cmake  Makefile  cmake_install.cmake  first_try.cbp
ros/build-src-Desktop_Qt_5_7_0_GCC_64bit-Default/first_try/catkin_generated/: pkg.develspace.context.pc.py  pkg.installspace.context.pc.py
ros/build-src-Desktop_Qt_5_7_0_GCC_64bit-Default/gtest/: CTestTestfile.cmake  Makefile  gtest.cbp
ros/build-src-Desktop_Qt_5_7_0_GCC_64bit-Default/stdr_simulator/stdr_gui/: CTestTestfile.cmake  Makefile  cmake_install.cmake  stdr_gui.cbp
ros/build-src-Desktop_Qt_5_7_0_GCC_64bit-Default/stdr_simulator/stdr_launchers/: CTestTestfile.cmake  Makefile  cmake_install.cmake  stdr_launchers.cbp
ros/build-src-Desktop_Qt_5_7_0_GCC_64bit-Default/stdr_simulator/stdr_msgs/: CTestTestfile.cmake  Makefile  cmake_install.cmake  stdr_msgs.cbp
ros/build-src-Desktop_Qt_5_7_0_GCC_64bit-Default/stdr_simulator/stdr_parser/: CTestTestfile.cmake  Makefile  cmake_install.cmake  stdr_parser.cbp
ros/build-src-Desktop_Qt_5_7_0_GCC_64bit-Default/stdr_simulator/stdr_resources/: CTestTestfile.cmake  Makefile  cmake_install.cmake  stdr_resources.cbp
ros/build-src-Desktop_Qt_5_7_0_GCC_64bit-Default/stdr_simulator/stdr_robot/: CTestTestfile.cmake  Makefile  cmake_install.cmake  stdr_robot.cbp
ros/build-src-Desktop_Qt_5_7_0_GCC_64bit-Default/stdr_simulator/stdr_samples/: CTestTestfile.cmake  Makefile  cmake_install.cmake  stdr_samples.cbp
ros/build-src-Desktop_Qt_5_7_0_GCC_64bit-Default/stdr_simulator/stdr_server/: CTestTestfile.cmake  Makefile  cmake_install.cmake  stdr_server.cbp
ros/build-src-Desktop_Qt_5_7_0_GCC_64bit-Default/stdr_simulator/stdr_simulator/: CTestTestfile.cmake  Makefile  cmake_install.cmake  stdr_simulator.cbp
ros/devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
ros/devel/include/stdr_msgs/: AddCO2SourceRequest.h  AddCO2SourceResponse.h  AddRfidTagRequest.h  AddRfidTagResponse.h  AddSoundSourceRequest.h  AddSoundSourceResponse.h  AddThermalSourceRequest.h  AddThermalSourceResponse.h  CO2SensorMeasurementMsg.h  CO2SensorMsg.h  CO2Source.h  CO2SourceVector.h  DeleteCO2SourceRequest.h  DeleteCO2SourceResponse.h  DeleteRfidTagRequest.h  DeleteRfidTagResponse.h  DeleteRobotAction.h  DeleteRobotActionFeedback.h  DeleteRobotActionGoal.h  DeleteRobotActionResult.h  DeleteRobotFeedback.h  DeleteRobotGoal.h  DeleteRobotResult.h  DeleteSoundSourceRequest.h  DeleteSoundSourceResponse.h  DeleteThermalSourceRequest.h  DeleteThermalSourceResponse.h  FootprintMsg.h  KinematicMsg.h  LaserSensorMsg.h  LoadExternalMapRequest.h  LoadExternalMapResponse.h  LoadMapRequest.h  LoadMapResponse.h  MoveBox.h  MoveBoxRequest.h  MoveBoxResponse.h  MoveRobotRequest.h  MoveRobotResponse.h  Noise.h  (+32 more)
ros/devel/lib/first_try/: command_prepare  dynamic_obstacle  kinMap  listener  mysql_test  new_arduino_driver  new_kinMap  simulator_controller  talker
ros/devel/lib/pkgconfig/: first_try.pc  my_robot_name_2dnav.pc  stdr_gui.pc  stdr_launchers.pc  stdr_msgs.pc  stdr_parser.pc  stdr_resources.pc  stdr_robot.pc  stdr_samples.pc  stdr_server.pc  xv_11_laser_driver.pc
ros/devel/lib/stdr_gui/: stdr_gui_node
ros/devel/lib/stdr_robot/: robot_handler
ros/devel/lib/stdr_samples/: stdr_obstacle_avoidance
ros/devel/lib/stdr_server/: load_map  stdr_server_node
ros/devel/lib/xv_11_laser_driver/: neato_laser_publisher
ros/src/: .rosinstall
ros/src/first_try/: CMakeLists.txt  package.xml
ros/src/first_try/src/: Mapping.cpp  Motor.cpp  Robot.cpp  controller_gui.cpp  fake_laser.cpp  helloworld.cpp  helloworld_listener.cpp  kalman_filter.cpp  kinMap.cpp  kinMap_mrpt.cpp  motor_arduino_ros.cpp  mrpt_bridge_map.cpp  mysql_test.cpp  new_kinGui.cpp  new_kinMap.cpp  new_kinMap_backup.cpp  prepare_table.cpp  robot_movement_controller.cpp  sample_box.cpp  simple.cpp  testingMotor  testingMotor.cpp
ros/src/first_try/src/MapGUI/: MapGUI.pro  main.cpp  mapgui.cpp  mapgui.h  mapgui.ui
ros/src/my_robot_name_2dnav/: CMakeLists.txt  package.xml
ros/src/my_robot_name_2dnav/info/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
ros/src/my_robot_name_2dnav/info_real_robot/: base_local_planner_params.yaml  costmap_common_params.yaml
ros/src/my_robot_name_2dnav/launch/: real_robot_move_base.launch  simulator_mvoe_base.launch
ros/start_script/: arduino_ros.sh  change.sh  controller.sh  debug_controller.sh  driver.sh  hector.sh  kinMap.sh  new_kinMap.sh  simulator_controller.sh  start_keyword_control.sh  stdr_box.sh  stdr_hector.sh  stdr_hector_rviz.rviz  stdr_simulator_gui.sh  web.sh
(+89 files in other folders)
